优化代码，提高程序性能和代码可读性。

--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\29410\AppData\Local\Programs\Python\Python311
+home = C:\Users\Administrator\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
 version = 3.11.8
-executable = C:\Users\29410\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\29410\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\29410\Desktop\python项目\Trade
+executable = C:\Users\Administrator\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\Administrator\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\Administrator\Desktop\pythonproject\Trade\Trade
